@@ -7,3 +7,4 @@ gem 'erubis'
 gem 'rack-test'
 gem 'minitest'
 gem 'redcarpet'
+gem 'uuid'
