@@ -4,24 +4,32 @@ require 'erubis'
 require 'redcarpet'
 
 
+USERS = { "admin"=>"topsecretpassword"}
+
 def render_markdown(text)
   markdown = Redcarpet::Markdown.new(Redcarpet::Render::HTML, fenced_code_blocks: true)
   markdown.render(text)
 end
 
-def file_exist(path)
+def find_file(path)
   unless File.exist?(path)
     session[:message] = "'#{File.basename(path)}' does not exist."
     redirect '/'
   end
 end
 
+def exists?(name)
+  Dir[data_path+"/*"].any? {|filename| File.basename(filename) == name}
+end
+
 def load_content(file_path)
+  content = File.read(file_path)
   case File.extname(file_path)
-  when '.md' then render_markdown(File.read(file_path))
+  when '.md'
+    erb render_markdown(content)
   when ".txt"
     headers["Content-Type"] = "text/plain"
-    File.read(file_path)
+    content
   else 
     send_file file_path
   end
@@ -35,10 +43,37 @@ def data_path
   end
 end
 
+def create(file_name)
+  file_name += '.txt' if File.extname(file_name) == ""
+  File.open(File.join(data_path, file_name), 'w')
+  session[:message] = "#{file_name} has been created"
+end
+
+def authenticated?
+  session[:token]
+end
+
+def user_exist?(username)
+  session[:message] = "User does not exist" unless USERS.key?(username)
+  USERS.key?(username)
+end
+
+def password_check(username, password)
+  session[:message] = "The password is incorrect" unless USERS[username] == password
+  USERS[username] == password
+end
+
+def verify(username, password)
+  if user_exist?(username) && password_check(username, password)
+    session[:token] = {username: username}
+  end
+end
+
 
 configure do
   enable :sessions
   set :session_secret, 'secret_key'
+  
 end
 
 helpers do
@@ -52,21 +87,74 @@ helpers do
 end
 
 before do
+  unless request.path == "/login"
+    redirect "/login", 303 unless authenticated?
+  else
+    redirect '/' if authenticated?
+  end
+end
+
+
+get '/' do
     @files = []
     path = File.join(data_path, "*")
     Dir[path].each do |entry|
-    @files << File.basename(entry) if File.file?(entry)
+      @files << File.basename(entry) if File.file?(entry)
     end
-end
-
-get '/' do
   erb :index
 end
 
+
+get '/new' do
+  erb :new
+end
+
+post '/new' do
+
+  new_file = params[:document_name]
+  unless exists?(new_file)
+    create(new_file)
+    redirect '/'
+  else
+    session[:message] = "#{new_file} already exists."
+    erb :index
+  end
+  
+end
+
+get '/login' do
+  erb :login
+end
+
+post '/login' do
+  username = params[:username]
+  password = params[:password]
+  verify username, password
+  if authenticated?
+    redirect "/"
+  else
+    redirect "/login"
+  end
+end
+
+get '/signout' do
+  session[:token] = nil
+  session[:message] = "You are logged out."
+  redirect '/login'
+end
+
+
+
 get '/:filename' do |filename| 
   file_path = File.join(data_path, filename)
-  file_exist(file_path)
+  find_file(file_path)
   load_content(file_path)
+end
+
+post "/:filename/delete" do |filename|
+  File.delete(File.join(data_path, filename))
+  session[:message] = "#{filename} has been deleted from the file system."
+  redirect '/'
 end
 
 get '/:filename/edit' do |filename|
@@ -83,3 +171,5 @@ post '/:filename' do |filename|
   session[:message] = "#{filename} has been successfully changed."
   redirect "/"
 end
+
+
