@@ -3,11 +3,21 @@
 - a wonderful programming language
 - dynamic and open source with a focus on simplicity and productivity
 - has elegant syntax that is natural to read and write
-- what happens when I write this here
 
 ```ruby
 friends = ['Ron', 'Tom', 'John']
 friends.each {|friend| puts "#{friend} says hi!"}
 ```
 
+1. Test
+2. Mess
+3. Best
+4. Rest
+
 Check out the [documentation](https://ruby-doc.org/)
+
+  
+  
+  
+  
+  
