@@ -1,7 +1,5 @@
 <form method='post' action='/<%= hattr(@filename) %>'>
-  <textarea name='file_content' rows="20" cols="100">
-    <%= @content %>
-  </textarea>
+  <textarea name='file_content' rows="20" cols="100"><%= @content %></textarea>
   <br>
   <button type='submit'>Save Changes</button>
   <a href="/">Cancel</a>
