@@ -1,0 +1,9 @@
+<form class='login' action='/login' method='post'>
+  <label for='username'>Username:</label>
+  <input type=text name='username'>
+  <br>
+  <label for='password'> Password:</label>
+  <input type='password' name='password'>
+  <br>
+  <button class='btn' type='submit'>Login</button>
+</form>
