@@ -1,0 +1,6 @@
+<form method='post' action='/new'>
+  <label for='document_name'>Add a new document:</label>
+  <br>
+  <input type="text" name='document_name'>
+  <button class='button' type="submit">Create</button>
+</form>
